--- a/index.html
+++ b/index.html
@@ -177,6 +177,72 @@
                     <span>Lugar turistico</span>
                 </div>
             </div>
+        </div>
+        <div class="card">
+            <img src="2.jpg" alt="Parque Tikal">
+            <div class="card-content">
+                <h2 class="card-title" style="text-align: center;">Antigua Guatemala</h2>
+                <p class="card-location">En Mundo Petapa encontrarás diversión y felicidad extrema. Este parque fue inaugurado el 26 de marzo de 1976</p>
+                <div class="card-rating">
+                    <div class="rating-number">9.3</div>
+                    <span>Lugar turistico</span>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="4.jpg" alt="Parque Tikal">
+            <div class="card-content">
+                <h2 class="card-title" style="text-align: center;">Cerro de la Cruz</h2>
+                <p class="card-location">En Mundo Petapa encontrarás diversión y felicidad extrema. Este parque fue inaugurado el 26 de marzo de 1976</p>
+                <div class="card-rating">
+                    <div class="rating-number">9.3</div>
+                    <span>Lugar turistico</span>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="7.jpg" alt="Parque Tikal">
+            <div class="card-content">
+                <h2 class="card-title" style="text-align: center;">Parque Nacional Tikal</h2>
+                <p class="card-location">En Mundo Petapa encontrarás diversión y felicidad extrema. Este parque fue inaugurado el 26 de marzo de 1976</p>
+                <div class="card-rating">
+                    <div class="rating-number">9.3</div>
+                    <span>Lugar turistico</span>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="10.jpg" alt="Parque Tikal">
+            <div class="card-content">
+                <h2 class="card-title" style="text-align: center;">Lago Atitlan</h2>
+                <p class="card-location">En Mundo Petapa encontrarás diversión y felicidad extrema. Este parque fue inaugurado el 26 de marzo de 1976</p>
+                <div class="card-rating">
+                    <div class="rating-number">9.3</div>
+                    <span>Lugar turistico</span>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="4.jpg" alt="Parque Tikal">
+            <div class="card-content">
+                <h2 class="card-title" style="text-align: center;">Cerro de la Cruz</h2>
+                <p class="card-location">En Mundo Petapa encontrarás diversión y felicidad extrema. Este parque fue inaugurado el 26 de marzo de 1976</p>
+                <div class="card-rating">
+                    <div class="rating-number">9.3</div>
+                    <span>Lugar turistico</span>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="6.jpg" alt="Parque Tikal">
+            <div class="card-content">
+                <h2 class="card-title" style="text-align: center;">Parque Nacional Tikal</h2>
+                <p class="card-location">En Mundo Petapa encontrarás diversión y felicidad extrema. Este parque fue inaugurado el 26 de marzo de 1976</p>
+                <div class="card-rating">
+                    <div class="rating-number">9.3</div>
+                    <span>Lugar turistico</span>
+                </div>
+            </div>
         </div> 
     </div>
     <button class="arrow-btn arrow-btn-left" id="prevBtn">&lt;</button>
