--- a/index2.html
+++ b/index2.html
@@ -15,9 +15,9 @@
         </a>
         <nav>
             <div class="links">
-                <a href="#opciones">Registra tu alojamiento</a>
-                <a href="">Hazte una cuenta</a>
-                <a href="">Iniciar sesión</a>
+                <a href="index.html">Registra tu alojamiento</a>
+                <a href="index.html">Hazte una cuenta</a>
+                <a href="index.html">Iniciar sesión</a>
             </div>
         </nav>
     </header>
@@ -28,21 +28,21 @@
 
     <div class="BotonesLogo">
         <div class="Playa">
-            <a> <img src="playa.png" alt="">Playa</a>
+            <a href="#playa"> <img src="playa.png" alt="">Playa</a>
         </div>
 
         <div class="Playa">
-            <a> <img src="ciudad.png" alt="">Ciudad</a>
+            <a href="#ciudad"> <img src="ciudad.png" alt="">Ciudad</a>
         </div>
 
         <div class="Playa">
-            <a> <img src="aire libre.png" alt ="">Aire Libre</a>
+            <a href="#Aire"> <img src="aire libre.png" alt ="">Aire Libre</a>
         </div>
 
     </div>
 
 
-    <div class="container-wrapper">
+    <div id="playa" class="container-wrapper">
     <div class="OpcionesBarra2" id="cardContainer">        
         <div class="card">
             <img src="Tikal.jpg" alt="Parque Tikal">
@@ -114,6 +114,226 @@
     <button class="arrow-btn arrow-btn-left" id="prevBtn">&lt;</button>
     <button class="arrow-btn arrow-btn-right" id="nextBtn">&gt;</button>
 </div>
+
+<div id="ciudad" class="container-wrapper">
+    <div class="OpcionesBarra2" id="cardContainer">        
+        <div class="card">
+            <img src="1.jpg" alt="Parque Tikal">
+            <div class="card-content">
+                <h2 class="card-title" style="text-align: center;">Parque Nacional Tikal</h2>
+                <p class="card-location">Fue establecido como Parque Nacional en 1955, sitio donde se encuentra la más extensa y monumental ciudad maya, con gran importancia cultural y natural</p>
+                <div class="card-rating">
+                    <div class="rating-number">9.3</div>
+                    <span>Lugar turistico</span>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="2.jpg" alt="Parque Tikal">
+            <div class="card-content">
+                <h2 class="card-title" style="text-align: center;">Antigua Guatemala</h2>
+                <p class="card-location">Esta bella y mágica ciudad colonial guarda casi quinientos años de historia, con un clima privilegiado y una excepcional vista hacia los volcanes de Fuego y Acatenango</p>
+                <div class="card-rating">
+                    <div class="rating-number">9.3</div>
+                    <span>Lugar turistico</span>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="3.jpg" alt="Parque Tikal">
+            <div class="card-content">
+                <h2 class="card-title" style="text-align: center;">Castillo San Felipe</h2>
+                <p class="card-location"> En la actualidad es uno de los sitios turísticos más importantes de la zona, cuenta con servicio de guías, y además este monumento forma parte de un corredor de castillos en las costas del Atlántico</p>
+                <div class="card-rating">
+                    <div class="rating-number">9.3</div>
+                    <span>Lugar turistico</span>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="4.jpg" alt="Parque Tikal">
+            <div class="card-content">
+                <h2 class="card-title" style="text-align: center;">Cerro de la Cruz </h2>
+                <p class="card-location">Es una pequeña montaña que podemos encontrar cerca de la ciudad de Antigua Guatemala. Su nombre actual es debido a una cruz que custodia la ciudad</p>
+                <div class="card-rating">
+                    <div class="rating-number">9.3</div>
+                    <span>Lugar turistico</span>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="5.jpg" alt="Parque Tikal">
+            <div class="card-content">
+                <h2 class="card-title" style="text-align: center;">Zoológico La Aurora</h2>
+                <p class="card-location">Es uno de los jardines más grandes de la ciudad; con 287 especies y más de 2,500 animales en toda la colección, el zoológico tiene diferentes áreas divididas por continentes, dentro de los cuales está África, Asia, América y Oceanía.</p>
+                <div class="card-rating">
+                    <div class="rating-number">9.3</div>
+                    <span>Lugar turistico</span>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="6.jpg" alt="Parque Tikal">
+            <div class="card-content">
+                <h2 class="card-title" style="text-align: center;">IRTRA Mundo Petapa</h2>
+                <p class="card-location">En Mundo Petapa encontrarás diversión y felicidad extrema. Este parque fue inaugurado el 26 de marzo de 1976</p>
+                <div class="card-rating">
+                    <div class="rating-number">9.3</div>
+                    <span>Lugar turistico</span>
+                </div>
+            </div>
+        </div> 
+    </div>
+    <button class="arrow-btn arrow-btn-left" id="prevBtn">&lt;</button>
+    <button class="arrow-btn arrow-btn-right" id="nextBtn">&gt;</button>
+</div>
+
+<div id="Aire" class="container-wrapper">
+    <div class="OpcionesBarra2" id="cardContainer">        
+        <div class="card">
+            <img src="7.jpg" alt="Parque Tikal">
+            <div class="card-content">
+                <h2 class="card-title" style="text-align: center;">Parque Nacional Tikal</h2>
+                <p class="card-location">Fue establecido como Parque Nacional en 1955, sitio donde se encuentra la más extensa y monumental ciudad maya, con gran importancia cultural y natural</p>
+                <div class="card-rating">
+                    <div class="rating-number">9.3</div>
+                    <span>Lugar turistico</span>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="8.jpg" alt="Parque Tikal">
+            <div class="card-content">
+                <h2 class="card-title" style="text-align: center;">Antigua Guatemala</h2>
+                <p class="card-location">Esta bella y mágica ciudad colonial guarda casi quinientos años de historia, con un clima privilegiado y una excepcional vista hacia los volcanes de Fuego y Acatenango</p>
+                <div class="card-rating">
+                    <div class="rating-number">9.3</div>
+                    <span>Lugar turistico</span>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="9.jpg" alt="Parque Tikal">
+            <div class="card-content">
+                <h2 class="card-title" style="text-align: center;">Castillo San Felipe</h2>
+                <p class="card-location"> En la actualidad es uno de los sitios turísticos más importantes de la zona, cuenta con servicio de guías, y además este monumento forma parte de un corredor de castillos en las costas del Atlántico</p>
+                <div class="card-rating">
+                    <div class="rating-number">9.3</div>
+                    <span>Lugar turistico</span>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="10.jpg" alt="Parque Tikal">
+            <div class="card-content">
+                <h2 class="card-title" style="text-align: center;">Cerro de la Cruz </h2>
+                <p class="card-location">Es una pequeña montaña que podemos encontrar cerca de la ciudad de Antigua Guatemala. Su nombre actual es debido a una cruz que custodia la ciudad</p>
+                <div class="card-rating">
+                    <div class="rating-number">9.3</div>
+                    <span>Lugar turistico</span>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="5.jpg" alt="Parque Tikal">
+            <div class="card-content">
+                <h2 class="card-title" style="text-align: center;">Zoológico La Aurora</h2>
+                <p class="card-location">Es uno de los jardines más grandes de la ciudad; con 287 especies y más de 2,500 animales en toda la colección, el zoológico tiene diferentes áreas divididas por continentes, dentro de los cuales está África, Asia, América y Oceanía.</p>
+                <div class="card-rating">
+                    <div class="rating-number">9.3</div>
+                    <span>Lugar turistico</span>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="7.jpg" alt="Parque Tikal">
+            <div class="card-content">
+                <h2 class="card-title" style="text-align: center;">IRTRA Mundo Petapa</h2>
+                <p class="card-location">En Mundo Petapa encontrarás diversión y felicidad extrema. Este parque fue inaugurado el 26 de marzo de 1976</p>
+                <div class="card-rating">
+                    <div class="rating-number">9.3</div>
+                    <span>Lugar turistico</span>
+                </div>
+            </div>
+        </div> 
+    </div>
+    <button class="arrow-btn arrow-btn-left" id="prevBtn">&lt;</button>
+    <button class="arrow-btn arrow-btn-right" id="nextBtn">&gt;</button>
+</div>
+
+<div class="container-wrapper">
+    <div class="OpcionesBarra2" id="cardContainer">        
+        <div class="card">
+            <img src="2.jpg" alt="Parque Tikal">
+            <div class="card-content">
+                <h2 class="card-title" style="text-align: center;">Parque Nacional Tikal</h2>
+                <p class="card-location">Fue establecido como Parque Nacional en 1955, sitio donde se encuentra la más extensa y monumental ciudad maya, con gran importancia cultural y natural</p>
+                <div class="card-rating">
+                    <div class="rating-number">9.3</div>
+                    <span>Lugar turistico</span>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="5.jpg" alt="Parque Tikal">
+            <div class="card-content">
+                <h2 class="card-title" style="text-align: center;">Antigua Guatemala</h2>
+                <p class="card-location">Esta bella y mágica ciudad colonial guarda casi quinientos años de historia, con un clima privilegiado y una excepcional vista hacia los volcanes de Fuego y Acatenango</p>
+                <div class="card-rating">
+                    <div class="rating-number">9.3</div>
+                    <span>Lugar turistico</span>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="1.jpg" alt="Parque Tikal">
+            <div class="card-content">
+                <h2 class="card-title" style="text-align: center;">Castillo San Felipe</h2>
+                <p class="card-location"> En la actualidad es uno de los sitios turísticos más importantes de la zona, cuenta con servicio de guías, y además este monumento forma parte de un corredor de castillos en las costas del Atlántico</p>
+                <div class="card-rating">
+                    <div class="rating-number">9.3</div>
+                    <span>Lugar turistico</span>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="10.jpg" alt="Parque Tikal">
+            <div class="card-content">
+                <h2 class="card-title" style="text-align: center;">Cerro de la Cruz </h2>
+                <p class="card-location">Es una pequeña montaña que podemos encontrar cerca de la ciudad de Antigua Guatemala. Su nombre actual es debido a una cruz que custodia la ciudad</p>
+                <div class="card-rating">
+                    <div class="rating-number">9.3</div>
+                    <span>Lugar turistico</span>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="9.jpg" alt="Parque Tikal">
+            <div class="card-content">
+                <h2 class="card-title" style="text-align: center;">Zoológico La Aurora</h2>
+                <p class="card-location">Es uno de los jardines más grandes de la ciudad; con 287 especies y más de 2,500 animales en toda la colección, el zoológico tiene diferentes áreas divididas por continentes, dentro de los cuales está África, Asia, América y Oceanía.</p>
+                <div class="card-rating">
+                    <div class="rating-number">9.3</div>
+                    <span>Lugar turistico</span>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="3.jpg" alt="Parque Tikal">
+            <div class="card-content">
+                <h2 class="card-title" style="text-align: center;">IRTRA Mundo Petapa</h2>
+                <p class="card-location">En Mundo Petapa encontrarás diversión y felicidad extrema. Este parque fue inaugurado el 26 de marzo de 1976</p>
+                <div class="card-rating">
+                    <div class="rating-number">9.3</div>
+                    <span>Lugar turistico</span>
+                </div>
+            </div>
+        </div> 
+    </div>
+    <button class="arrow-btn arrow-btn-left" id="prevBtn">&lt;</button>
+    <button class="arrow-btn arrow-btn-right" id="nextBtn">&gt;</button>
+</div>
+
 
     <script>
             const nextBtn = document.getElementById('nextBtn');
