--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         </label>
                     </div>
                 </div>
-                <button id="search-button">Buscar</button>
+                <button onclick="window.location.href='//www.booking.com/?aid=348858&label=gx-latam-booking-booking-sd-nmcy'" id="search-button">Buscar</button>
             </div>
             <label>
                 <input type="checkbox" id="work-travel"> Viajo por trabajo
